--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -6,13 +6,13 @@ unset(PYTHON_EXECUTABLE CACHE)
 find_package(PythonInterp 3 REQUIRED)
 
 add_custom_target(llvm
-    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/llvm/build.py prepare ${PLATFORM}
-    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/llvm/build.py build ${PLATFORM}
-    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/llvm/build.py package ${PLATFORM}
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/llvm/build.py prepare ${QBDI_PLATFORM}-${QBDI_ARCH}
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/llvm/build.py build   ${QBDI_PLATFORM}-${QBDI_ARCH}
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/llvm/build.py package ${QBDI_PLATFORM}-${QBDI_ARCH}
 )
 
-file(GLOB LLVMIncludeFile LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/deps/llvm/${PLATFORM}/include/*")
-file(GLOB LLVMLibFile LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/deps/llvm/${PLATFORM}/lib/*")
+file(GLOB LLVMIncludeFile LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/deps/llvm/${QBDI_PLATFORM}-${QBDI_ARCH}/include/*")
+file(GLOB LLVMLibFile LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/deps/llvm/${QBDI_PLATFORM}-${QBDI_ARCH}/lib/*")
 
 if (NOT (LLVMLibFile AND LLVMIncludeFile))
 
@@ -26,22 +26,22 @@ endif()
 if(TEST_QBDI)
     if(${OS} STREQUAL "win")
     add_custom_target(gtest
-        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/deps/gtest/${PLATFORM}/
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/deps/gtest/${QBDI_PLATFORM}-${QBDI_ARCH}/
         COMMAND python build.py prepare
         COMMAND python build.py build
         COMMAND python build.py package
     )
     else()
     add_custom_target(gtest
-        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/deps/gtest/${PLATFORM}/
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/deps/gtest/${QBDI_PLATFORM}-${QBDI_ARCH}/
         COMMAND sh build.sh prepare
         COMMAND sh build.sh build
         COMMAND sh build.sh package
     )
     endif()
 
-    file(GLOB GTestIncludeFile LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/deps/gtest/${PLATFORM}/include/*")
-    file(GLOB GTestLibFile LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/deps/gtest/${PLATFORM}/lib/*")
+    file(GLOB GTestIncludeFile LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/deps/gtest/${QBDI_PLATFORM}-${QBDI_ARCH}/include/*")
+    file(GLOB GTestLibFile LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/deps/gtest/${QBDI_PLATFORM}-${QBDI_ARCH}/lib/*")
 
     if (NOT (GTestLibFile AND GTestIncludeFile))
 
