--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -4,10 +4,10 @@ SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Charles Hubain <chubain@quarslab.com>")
 SET(CPACK_PACKAGE_VERSION_MAJOR "${QBDI_VERSION_MAJOR}")
 SET(CPACK_PACKAGE_VERSION_MINOR "${QBDI_VERSION_MINOR}")
 SET(CPACK_PACKAGE_VERSION_PATCH "${QBDI_VERSION_PATCH}")
-SET(CPACK_SYSTEM_NAME ${PLATFORM})
+SET(CPACK_SYSTEM_NAME ${QBDI_PLATFORM}-${QBDI_ARCH})
 SET(CPACK_PACKAGE_FILE_NAME "QBDI-${QBDI_VERSION_STRING}-${CPACK_SYSTEM_NAME}")
-if ("${OS}" STREQUAL "win")
-    if ("${ARCH}" STREQUAL "X86_64")
+if (QBDI_PLATFORM_WINDOWS)
+    if (QBDI_ARCH_X86_64)
 	    SET(CPACK_GENERATOR "NSIS64")
     else()
 	    SET(CPACK_GENERATOR "NSIS")
@@ -16,12 +16,13 @@ if ("${OS}" STREQUAL "win")
 else()
 	SET(CPACK_GENERATOR "TGZ")
 endif()
+
 if(FULL_PACKAGE)
     SET(CPACK_SET_DESTDIR true)
     SET(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
     SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY "./")
     SET(CPACK_COMPONENTS_ALL "QBDI;QBDITemplate;QBDIFridaTemplate")
-    if(PACKAGE_LIBNCURSE6)
+    if(QBDI_PACKAGE_LIBNCURSE6)
         SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libncurses6, zlib1g, libatomic1")
     else()
         SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libncurses5, zlib1g, libatomic1")
@@ -35,7 +36,7 @@ SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/../LICENSE.txt")
 
 INCLUDE(CPack)
 
-if(UNIX AND NOT ("${PLATFORM}" STREQUAL "android-ARM"))
+if(UNIX AND NOT (QBDI_PLATFORM_ANDROID))
     add_custom_target(docker_packager
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../package/
         COMMAND "sh" launch_docker_packager.sh
