--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,17 +12,19 @@ environment:
   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
   CMAKE_TEMPLATE: Visual Studio 16 2019
   matrix:
-    - platform: X64
-      qbdi_plateform: win-X86_64
-    - platform: X86
-      qbdi_plateform: win-X86
+    - arch_vcvarsall: X64
+      qbdi_arch: X86_64
+      qbdi_plateform: WINDOWS
+    - arch_vcvarsall: X86
+      qbdi_arch: X86
+      qbdi_plateform: WINDOWS
 
 
 cache:
-  - deps\llvm\%qbdi_plateform%\lib -> deps\llvm\build.py
-  - deps\llvm\%qbdi_plateform%\include -> deps\llvm\build.py
-  - deps\gtest\%qbdi_plateform%\lib -> deps\gtest\%qbdi_plateform%\build.py
-  - deps\gtest\%qbdi_plateform%\include -> deps\gtest\%qbdi_plateform%\build.py
+  - deps\llvm\%qbdi_plateform%-%qbdi_arch%\lib -> deps\llvm\build.py
+  - deps\llvm\%qbdi_plateform%-%qbdi_arch%\include -> deps\llvm\build.py
+  - deps\gtest\%qbdi_plateform%-%qbdi_arch%\lib -> deps\gtest\%qbdi_plateform%-%qbdi_arch%\build.py
+  - deps\gtest\%qbdi_plateform%-%qbdi_arch%\include -> deps\gtest\%qbdi_plateform%-%qbdi_arch%\build.py
 
 install:
   # Install Python (from the official .msi of https://python.org) and pip when
@@ -37,13 +39,13 @@ install:
   - cmd: cd build
 
 build_script:
-  - "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Community\\VC\\Auxiliary\\Build\\vcvarsall.bat\" %Platform%"
-  - cmd: cmake .. -G "Ninja" -DCMAKE_CROSSCOMPILING=FALSE -DCMAKE_BUILD_TYPE=%configuration% -DPLATFORM=%qbdi_plateform% -DEXAMPLES=TRUE
-  - ps: if (-not((Test-Path("../deps/llvm/$env:qbdi_plateform/lib")) -and (Test-Path("../deps/llvm/$env:qbdi_plateform/include")))) { python ..\deps\llvm\build.py prepare "$env:qbdi_plateform" ; python ..\deps\llvm\build.py build "$env:qbdi_plateform" ; python ..\deps\llvm\build.py package "$env:qbdi_plateform" }
-  - cmd: python ..\deps\llvm\build.py clean %qbdi_plateform%
-  - ps: if (-not((Test-Path("../deps/gtest/$env:qbdi_plateform/lib")) -and (Test-Path("../deps/gtest/$env:qbdi_plateform/include")))) { ninja -v gtest }
-  - cmd: python ..\deps\gtest\%qbdi_plateform%\build.py clean %qbdi_plateform%
-  - cmd: cmake .. -G "Ninja" -DCMAKE_CROSSCOMPILING=FALSE -DCMAKE_BUILD_TYPE=%configuration% -DPLATFORM=%qbdi_plateform% -DEXAMPLES=TRUE
+  - "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Community\\VC\\Auxiliary\\Build\\vcvarsall.bat\" %arch_vcvarsall%"
+  - cmd: cmake .. -G "Ninja" -DCMAKE_CROSSCOMPILING=FALSE -DCMAKE_BUILD_TYPE=%configuration% -DQBDI_PLATFORM=%qbdi_plateform% -DQBDI_ARCH=%qbdi_arch% -DEXAMPLES=TRUE
+  - ps: if (-not((Test-Path("../deps/llvm/$env:qbdi_plateform-$env:qbdi_arch/lib")) -and (Test-Path("../deps/llvm/$env:qbdi_plateform-$env:qbdi_arch/include")))) { python ..\deps\llvm\build.py prepare "$env:qbdi_plateform-$env:qbdi_arch" ; python ..\deps\llvm\build.py build "$env:qbdi_plateform-$env:qbdi_arch" ; python ..\deps\llvm\build.py package "$env:qbdi_plateform-$env:qbdi_arch" }
+  - cmd: python ..\deps\llvm\build.py clean %qbdi_plateform%-%qbdi_arch%
+  - ps: if (-not((Test-Path("../deps/gtest/$env:qbdi_plateform-$env:qbdi_arch/lib")) -and (Test-Path("../deps/gtest/$env:qbdi_plateform-$env:qbdi_arch/include")))) { ninja -v gtest }
+  - cmd: python ..\deps\gtest\%qbdi_plateform%-%qbdi_arch%\build.py clean
+  - cmd: cmake .. -G "Ninja" -DCMAKE_CROSSCOMPILING=FALSE -DCMAKE_BUILD_TYPE=%configuration% -DQBDI_PLATFORM=%qbdi_plateform% -DQBDI_ARCH=%qbdi_arch% -DEXAMPLES=TRUE
   - cmd: ninja
 
 after_build:
