Correct appveyor and install header path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -349,7 +349,7 @@ if(${DEPENDENCY_SATISFIED})
     install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/QBDI" DESTINATION include/ PATTERN "*.in" EXCLUDE)
     install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include/QBDI" DESTINATION include/)
 
-    install(FILES "${CMAKE_CURRENT_BINARY_DIR}include/QBDI.h" DESTINATION include/)
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/QBDI.h" DESTINATION include/)
 
 
     if(FULL_PACKAGE)
