--- a/tools/QBDIPreload/CMakeLists.txt
+++ b/tools/QBDIPreload/CMakeLists.txt
@@ -12,6 +12,10 @@ add_library(QBDIPreload STATIC ${SOURCES})
 
 # Also add build directory as include path for the mach_exc.h header
 target_include_directories(QBDIPreload PRIVATE
+    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include/QBDI>
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/QBDI>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
