--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,21 @@
+
+
+include(ExternalProject)
+
+ExternalProject_Add(QBDITest_Catch2
+    GIT_REPOSITORY      "https://github.com/catchorg/Catch2.git"
+    GIT_PROGRESS        "true"
+    GIT_TAG             "v2.9.2"
+    CONFIGURE_COMMAND   ""
+    BUILD_COMMAND       ""
+    INSTALL_COMMAND     "")
+
+ExternalProject_get_property(QBDITest_Catch2 SOURCE_DIR)
+set(QBDITest_Catch2_SOURCE_DIR "${SOURCE_DIR}")
+
 set(SOURCES
     QBDITest.cpp
     API/AllocTest.cpp
-    API/MemoryAccessTest.cpp
     API/RangeTest.cpp
     API/VMTest.cpp
     ExecBlock/ExecBlockTest.cpp
@@ -14,6 +28,10 @@ set(SOURCES
     TestSetup/InMemoryAssembler.cpp
     TestSetup/ShellcodeTester.cpp
 )
+
+if (QBDI_ARCH_X86_64 OR QBDI_ARCH_X86)
+    set(SOURCES ${SOURCES} "API/MemoryAccessTest.cpp")
+endif()
 
 if(QBDI_PLATFORM_WINDOWS AND QBDI_ARCH_X86_64)
     set(SOURCES ${SOURCES}
@@ -32,30 +50,17 @@ add_signature(QBDITest)
 target_include_directories(QBDITest PRIVATE
     "${CMAKE_BINARY_DIR}/include"
     "${CMAKE_BINARY_DIR}/include/QBDI"
+    "${CMAKE_SOURCE_DIR}/include"
+    "${CMAKE_SOURCE_DIR}/include/QBDI"
     "${CMAKE_CURRENT_SOURCE_DIR}"
     "${CMAKE_CURRENT_SOURCE_DIR}/../src"
     "${CMAKE_CURRENT_SOURCE_DIR}/../deps/llvm/${QBDI_PLATFORM}-${QBDI_ARCH}/include"
     "${CMAKE_CURRENT_SOURCE_DIR}/../deps/llvm/${QBDI_PLATFORM}-${QBDI_ARCH}/lib/Target/${QBDI_LLVM_ARCH}"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../deps/gtest/${QBDI_PLATFORM}-${QBDI_ARCH}/include"
+    "${QBDITest_Catch2_SOURCE_DIR}/single_include"
 )
 
-find_library(GTEST gtest PATHS
-    "${CMAKE_CURRENT_SOURCE_DIR}/../deps/gtest/${QBDI_PLATFORM}-${QBDI_ARCH}/lib"
-    NO_DEFAULT_PATH)
-
-
-if (${GTEST} STREQUAL "GTEST-NOTFOUND")
-    target_link_libraries(QBDITest
-        QBDI_static
-        "${CMAKE_CURRENT_SOURCE_DIR}/../deps/gtest/${PLATFORM}/lib/libgtest.a"
-    )
-else()
-    target_link_libraries(QBDITest
-        QBDI_static
-        ${GTEST}
-    )
-endif()
-
+add_dependencies(QBDITest QBDITest_Catch2)
+target_link_libraries(QBDITest QBDI_static)
 
 set_property(TARGET QBDITest PROPERTY CXX_STANDARD 11)
 set_property(TARGET QBDITest PROPERTY CXX_STANDARD_REQUIRED ON)
