--- a/tools/QBDIPreload/CMakeLists.txt
+++ b/tools/QBDIPreload/CMakeLists.txt
@@ -16,6 +16,7 @@ target_include_directories(QBDIPreload PRIVATE
     $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include/QBDI>
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/QBDI>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
