Correct docker and CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ osx_target: &osx_target
   env:
     - QBDI_PLATFORM="OSX"
     - QBDI_ARCH="X86_64"
-    - CMAKE_ARGS="-DCMAKE_BUILD_TYPE=Release -DCMAKE_CROSSCOMPILING=FALSE -DQBDI_PLATFORM=${QBDI_PLATFORM} -DQBDI_ARCH=${QBDI_ARCH} -DQBDI_TOOLS_VALIDATOR=TRUE -DQBDI_EXAMPLES=TRUE"
+    - CMAKE_ARGS="-DCMAKE_BUILD_TYPE=Release -DCMAKE_CROSSCOMPILING=FALSE -DQBDI_PLATFORM=${QBDI_PLATFORM} -DQBDI_ARCH=${QBDI_ARCH} -DQBDI_TOOLS_VALIDATOR=ON -DQBDI_EXAMPLES=ON"
 
 osx_target32: &osx_target32
   os: osx
@@ -41,7 +41,7 @@ osx_target32: &osx_target32
   env:
     - QBDI_PLATFORM="OSX"
     - QBDI_ARCH="X86"
-    - CMAKE_ARGS="-DCMAKE_BUILD_TYPE=Release -DCMAKE_CROSSCOMPILING=FALSE -DQBDI_PLATFORM=${QBDI_PLATFORM} -DQBDI_ARCH=${QBDI_ARCH} -DQBDI_TOOLS_VALIDATOR=TRUE -DQBDI_EXAMPLES=TRUE"
+    - CMAKE_ARGS="-DCMAKE_BUILD_TYPE=Release -DCMAKE_CROSSCOMPILING=FALSE -DQBDI_PLATFORM=${QBDI_PLATFORM} -DQBDI_ARCH=${QBDI_ARCH} -DQBDI_TOOLS_VALIDATOR=ON -DQBDI_EXAMPLES=ON"
 
 install_llvm: &install_llvm
   script:
