--- a/docker/ubuntu_debian_devel/Dockerfile
+++ b/docker/ubuntu_debian_devel/Dockerfile
@@ -7,7 +7,7 @@ ARG QBDI_ARCH="X86_64"
 ENV USER="docker" \
     HOME="/home/docker" \
     PREFIX="/usr" \
-    QBDI_PLATFOMR="LINUX"
+    QBDI_PLATFORM="LINUX"
 
 # Get latest package list, upgrade packages, install required packages
 # and cleanup to keep container as small as possible
@@ -91,10 +91,10 @@ RUN sudo chown -R $USER:$USER . && \
           -DQBDI_PLATFORM=$QBDI_PLATFORM \
           -DQBDI_ARCH=$QBDI_ARCH \
           -DCMAKE_INSTALL_PREFIX=$PREFIX \
-          -DLOG_DEBUG=TRUE \
-          -DEXAMPLES=TRUE \
-          -DTOOLS_PYQBDI=TRUE \
-          -DTOOLS_VALIDATOR=TRUE \
+          -DQBDI_LOG_DEBUG=ON \
+          -DQBDI_EXAMPLES=ON \
+          -DQBDI_TOOLS_PYQBDI=ON \
+          -DQBDI_TOOLS_VALIDATOR=ON \
           $CMAKE_ARGUMENT \
           ../ && \
     make -j4 && \
