--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,10 +38,10 @@ install:
 
 build_script:
   - "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Community\\VC\\Auxiliary\\Build\\vcvarsall.bat\" %arch_vcvarsall%"
-  - cmd: cmake .. -G "Ninja" -DCMAKE_CROSSCOMPILING=FALSE -DCMAKE_BUILD_TYPE=%configuration% -DQBDI_PLATFORM=%qbdi_plateform% -DQBDI_ARCH=%qbdi_arch% -DQBDI_EXAMPLES=TRUE
+  - cmd: cmake .. -G "Ninja" -DCMAKE_CROSSCOMPILING=FALSE -DCMAKE_BUILD_TYPE=%configuration% -DQBDI_PLATFORM=%qbdi_plateform% -DQBDI_ARCH=%qbdi_arch% -DQBDI_EXAMPLES=ON
   - ps: if (-not((Test-Path("../deps/llvm/$env:qbdi_plateform-$env:qbdi_arch/lib")) -and (Test-Path("../deps/llvm/$env:qbdi_plateform-$env:qbdi_arch/include")))) { python ..\deps\llvm\build.py prepare "$env:qbdi_plateform-$env:qbdi_arch" ; python ..\deps\llvm\build.py build "$env:qbdi_plateform-$env:qbdi_arch" ; python ..\deps\llvm\build.py package "$env:qbdi_plateform-$env:qbdi_arch" }
   - cmd: python ..\deps\llvm\build.py clean %qbdi_plateform%-%qbdi_arch%
-  - cmd: cmake .. -G "Ninja" -DCMAKE_CROSSCOMPILING=FALSE -DCMAKE_BUILD_TYPE=%configuration% -DQBDI_PLATFORM=%qbdi_plateform% -DQBDI_ARCH=%qbdi_arch% -DQBDI_EXAMPLES=TRUE
+  - cmd: cmake .. -G "Ninja" -DCMAKE_CROSSCOMPILING=FALSE -DCMAKE_BUILD_TYPE=%configuration% -DQBDI_PLATFORM=%qbdi_plateform% -DQBDI_ARCH=%qbdi_arch% -DQBDI_EXAMPLES=ON
   - cmd: ninja
 
 after_build:
